Made every piece of text use rem units. Now if someone dies from bleeding they correctly lose the match that same turn

--- a/wwwroot/css/containers.css
+++ b/wwwroot/css/containers.css
@@ -10,6 +10,8 @@
     align-items: flex-start;
 }
 
+.evenly { justify-content: space-evenly; }
+
 .full-h { height: 100%; }
 .h-80 { height: 80%; }
 .h-55 { height: 55%; }
